--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -20,9 +20,9 @@
             <img src="/static/img/icon/device.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Ger&auml;te
         </a>
-        <a href="/automation/admin/switchserver" class="item {% if module == 'switchserver' %}active{% endif %}">
-            <img src="/static/img/icon/switchserver.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
-            Schaltserver
+        <a href="/automation/admin/mqtt" class="item {% if module == 'mqtt' %}active{% endif %}">
+            <img src="/static/img/icon/mqtt.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
+            MQTT
         </a>
         <a href="/automation/admin/sensorvalues" class="item {% if module == 'sensorvalues' %}active{% endif %}">
             <img src="/static/img/icon/sensorvalues.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
