--- a/src/main/resources/webserver/template/automation/admin/index.html
+++ b/src/main/resources/webserver/template/automation/admin/index.html
@@ -18,12 +18,12 @@
                     <div class="header">Ger&auml;te</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = '/automation/admin/switchserver'">
+            <div class="card" onclick="window.location = '/automation/admin/mqtt'">
                 <div class="image">
-                    <img src="/static/img/icon/switchserver.png">
+                    <img src="/static/img/icon/mqtt.png">
                 </div>
                 <div class="content">
-                    <div class="header">Schaltserver</div>
+                    <div class="header">MQTT</div>
                 </div>
             </div>
             <div class="card" onclick="window.location = '/automation/admin/sensorvalues'">
