update star rating view to fomantic-ui 2.8

--- a/src/main/resources/webserver/template/movie/user/movie/movielist.html
+++ b/src/main/resources/webserver/template/movie/user/movie/movielist.html
@@ -61,22 +61,22 @@
                     <span class="text">Bewertung</span>
                     <div class="menu">
                         <a class="item" href="/movie/movie?rating=0">
-                            <div class="item ui rating star" data-rating="0" data-max-rating="5"></div>
+                            <div class="item ui rating yellow" data-rating="0" data-icon="star" data-max-rating="5"></div>
                         </a>
                         <a class="item" href="/movie/movie?rating=1">
-                            <div class="item ui rating star" data-rating="1" data-max-rating="5"></div>
+                            <div class="item ui rating yellow" data-rating="1" data-icon="star" data-max-rating="5"></div>
                         </a>
                         <a class="item" href="/movie/movie?rating=2">
-                            <div class="item ui rating star" data-rating="2" data-max-rating="5"></div>
+                            <div class="item ui rating yellow" data-rating="2" data-icon="star" data-max-rating="5"></div>
                         </a>
                         <a class="item" href="/movie/movie?rating=3">
-                            <div class="item ui rating star" data-rating="3" data-max-rating="5"></div>
+                            <div class="item ui rating yellow" data-rating="3" data-icon="star" data-max-rating="5"></div>
                         </a>
                         <a class="item" href="/movie/movie?rating=4">
-                            <div class="item ui rating star" data-rating="4" data-max-rating="5"></div>
+                            <div class="item ui rating yellow" data-rating="4" data-icon="star" data-max-rating="5"></div>
                         </a>
                         <a class="item" href="/movie/movie?rating=5">
-                            <div class="item ui rating star" data-rating="5" data-max-rating="5"></div>
+                            <div class="item ui rating yellow" data-rating="5" data-icon="star" data-max-rating="5"></div>
                         </a>
                     </div>
                 </div>
