--- a/src/main/resources/webserver/template/movie/user/movieseries/movieseriesview.html
+++ b/src/main/resources/webserver/template/movie/user/movieseries/movieseriesview.html
@@ -153,7 +153,7 @@
                                     {% endif %}
                                 </div>
                                 <div class="ui label teal">
-                                    <div class="ui rating star large" data-rating="{{ movies.get(seriesMovie.getMovieId().get()).getRating() }}" data-max-rating="5"></div>
+                                    <div class="ui rating yellow large" data-rating="{{ movies.get(seriesMovie.getMovieId().get()).getRating() }}" data-icon="star" data-max-rating="5"></div>
                                 </div>
                                 <div class="ui label blue">
                                     {% if seriesMovie.getSeriesType() == 'Prequel' %}
